# download_opendats

./: README.md  example.json  ih.py  main.py  pde.py  pyproject.toml  requirements.txt  setup.py
base/: opendat.py
example/: example_ih.py  example_pde.py
notebook/: example_Copernicus.ipynb  example_IH.ipynb  example_PdE.ipynb
opendats/: __init__.py  __main__.py  ih.py  opendat.py  pde.py
src/opendats/: catalog.py  config.py  datasets.py  logging_utils.py  opendat.py
test/: test.py
